# smc-erp

backend/: .gitignore  main.py  pyproject.toml  start_server.sh  test_api.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  persons.py
backend/app/core/: config.py  db.py
backend/app/models/: person.py
backend/app/schemas/: __init__.py  person.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DeleteConfirmation.tsx  LoadingSpinner.tsx  PersonCard.tsx  PersonForm.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts
frontend/src/types/: person.ts
